# Lab_Assembler_Project

./: .gitignore  CMakeLists.txt  Makefile  README.md  makefile
AST/: AST.c  AST.h
Assembler/: analyzationAndUtilities.c  analyzationAndUtilities.h  assembler.c  assembler.h  dataStructuresAndConstants.h  firstPass.c  firstPass.h  secondPass.c  secondPass.h  syntaxAnalyzer.c  syntaxAnalyzer.h  utilities.c  utilities.h
PreAsmblr/: PreAsmblr.c  PreAsmblr.h
include/: PreAsmblr.h  assembler.h  dataConversion.h  dataStrcuturesInitialization.h  dataStructuresAndConstants.h  error.h  fileFunctions.h  firstPass.h  initializationFunctions.h  listFunctions.h  preAsmblr.h  secondPass.h  syntaxAnalyzer.h  utilities.h
main/: main.c  main.h  testFile  testFileDefine  testFileErrors  testFileTemp
src/: PreAsmblr.c  assembler.c  dataConversion.c  dataStrcuturesInitialization.c  error.c  fileFunctions.c  firstPass.c  initializationFunctions.c  listFunctions.c  preAsmblr.c  secondPass.c  syntaxAnalyzer.c  utilities.c
tests/: invalidInput1.as  ps.am  ps.as  testDataSize.as  testErrors2.as  testErrors3.as  testFile  testFileErrors.am  testFileErrors.as  testFileTemp  testFunctions.c  testFunctions.h  testMacros.as  validInput2.as  validTest.as  validTest2.am  validTest2.as
tests/input_examples/Invalid Inputs Examples/Invalid_Input_1/: invalidInput1.am
tests/input_examples/Invalid Inputs Examples/Invalid_Input_2/: invalidInput2.am
tests/input_examples/Invalid Inputs Examples/Invalid_Input_3/: invalidInput3.am  invalidInput3.as
tests/input_examples/Valid Inputs Examples/Course_Tester_File/: ps.am
(+11 files in other folders)
